// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addTag calls store creator and returns result - valid typeid 1`] = `
Object {
  "message": undefined,
  "success": true,
  "tag": Object {
    "id": "1",
    "label": "bakery",
    "typeid": "1",
  },
}
`;

exports[`addTag does not call store creator and returns result - invalid typeid 1`] = `
Object {
  "message": "Type ID does not exist",
  "success": false,
  "tag": null,
}
`;

exports[`deleteTag calls store destroy and returns result - id exists 1`] = `
Object {
  "message": undefined,
  "success": true,
  "tag": null,
}
`;

exports[`deleteTag calls store destroy and returns result - id not found 1`] = `
Object {
  "message": "ID not found",
  "success": false,
  "tag": null,
}
`;

exports[`updateTag calls store update and returns result - id not found 1`] = `
Object {
  "message": "ID does not exist",
  "success": false,
  "tag": null,
}
`;

exports[`updateTag calls store update with values and returns result - id exists 1`] = `
Object {
  "message": undefined,
  "success": true,
  "tag": Object {
    "id": "2",
    "label": "new label",
    "typeid": "1",
  },
}
`;
